<resources>
  <string name="app_name">Rest Garden</string>
  <string name="enigma_it_bootcamp">Enigma IT Bootcamp</string>
  <string name="sign_in">Sign In</string>
  <string name="register">Register</string>
  <string name="dont_have_account">Don\'t have account ?</string>
  <string name="have_account">Have account ?</string>
  <string name="search">Search</string>
  <string name="profile">Profile</string>
  <string name="booking_list">Booking List</string>
  <string name="name">Name</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="full_name">Full Name</string>
  <string name="address">Address</string>
  <string name="email">Email</string>
  <string name="phone_number">Phone Number</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="status">Status</string>
  <string name="date_reservation">Date Reservation</string>
  <string name="date_expired">Date Expired</string>
  <string name="reserved_slots">Reserved Slots</string>
  <string name="cancel">Cancel</string>
  <string name="thank_you">Thank You</string>
  <string name="back">Back</string>
  <string name="grave">Grave</string>
  <string name="notes">Notes</string>
  <string name="location">Location</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="_0">0</string>
  <string name="type">Type</string>
  <string name="booking">Booking</string>
  <string name="error_occurred">Error Occurred</string>
  <string name="something_wrong">Something Wrong…</string>
  <string name="menu">Menu</string>
  <string name="container">Container</string>
  <string name="please_wait">Please Wait…</string>
  <string name="description">Description</string>
  <string name="no">No</string>
  <string name="yes">Yes</string>
  <string name="home">Home</string>
  <string name="sign_in_error">Wrong username or password</string>
  <string name="logout">Logout</string>
  <string name="price">Price</string>
  <string name="plus">+</string>
  <string name="minus">−</string>
  <string name="payment_method">Payment Method</string>
  <string name="dana">DANA</string>
  <string name="ovo">OVO</string>
  <string name="link_aja">Link Aja</string>
  <string name="break_line">Break Line</string>
  <string name="booking_fee">Booking Fee</string>
  <string name="payment_summary">Payment Summary</string>
  <string name="total_payment">Total Payment</string>
  <string name="buy">Buy</string>
  <string name="ask_logout">Sure want to logout?</string>
  <string name="subscribe">Subscribe</string>
  <string name="assign">Assign</string>
  <string name="private_graveyard">Private Graveyard</string>
  <string name="public_graveyard">Public Graveyard</string>
  <string name="search_by">by Name and Address</string>
  <string name="transaction_list">Transaction List</string>
  <string name="extend_for">Extend for 1 month</string>
  <string name="public_graveyard_with_available_slots">Public Graveyard with Available Slots</string>
  <string name="private_graveyard_with_available_slots">Private Graveyard with Available Slots</string>
  <string name="date">Date</string>
  <string name="transaction_date">Transaction Date</string>
  <string name="slots">Slots</string>
  <string name="total_price">Total Price</string>
  <string name="transaction_id">Transaction ID</string>
  <string name="history">History</string>
  <string name="transaction_history">Transaction History</string>
  <string name="save">Save</string>
  <string name="personal_information">Personal Information</string>
  <string name="cash">Cash</string>
  <string name="bank_transfer">Bank Transfer</string>
  <string name="m_banking">M-Banking</string>
  <string name="e_wallet">E-Wallet</string>
</resources>
