<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/re_green"
  tools:context=".ui.screen.ReSubscribeFragment">
  
  <TextView
    android:id="@+id/tv_re_subscribe_name"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="64dp"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="64dp"
    android:ellipsize="end"
    android:fontFamily="@font/poppins_semibold"
    android:singleLine="true"
    android:text="@string/name"
    android:textColor="@color/white"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  
  <TextView
    android:id="@+id/tv_re_subscribe_address"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:ellipsize="end"
    android:singleLine="true"
    android:text="@string/address"
    android:textColor="@color/white"
    android:textSize="17sp"
    app:layout_constraintEnd_toEndOf="@+id/tv_re_subscribe_name"
    app:layout_constraintStart_toStartOf="@+id/tv_re_subscribe_name"
    app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_name" />
  
  <ImageButton
    android:id="@+id/btn_re_subscribe_back"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:backgroundTint="@color/transparent"
    android:contentDescription="@string/back"
    android:scaleType="centerCrop"
    android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:tint="@color/black" />
  
  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/csl_re_subscribe"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="24dp"
    android:background="@drawable/card_white"
    android:orientation="vertical"
    android:padding="24dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_address">
    
    
    <TextView
      android:id="@+id/tv_re_subscribe_grave"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/grave"
      android:textSize="24sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
    
    <TextView
      android:id="@+id/tv_re_subscribe_grave_price"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/price"
      app:layout_constraintStart_toStartOf="@+id/tv_re_subscribe_grave"
      app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_grave" />
    
    <ImageView
      android:id="@+id/imageView5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/break_line"
      android:src="@drawable/black_line"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_grave_price" />
    
    <TextView
      android:id="@+id/tv_re_subscribe_payment_method"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/payment_method"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView5" />
    
    <RadioGroup
      android:id="@+id/rdg_re_subscribe_payment_method"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="horizontal"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_payment_method">
      
      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rdbtn_re_subscribe_dana"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:background="@drawable/radio_corner"
        android:backgroundTint="@color/dana"
        android:buttonTint="@color/re_black"
        android:text="@string/dana"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />
      
      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rdbtn_re_subscribe_ovo"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:background="@drawable/radio_corner"
        android:backgroundTint="@color/ovo"
        android:buttonTint="@color/re_black"
        android:text="@string/ovo"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />
      
      <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/rdbtn_re_subscribe_link_aja"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginHorizontal="4dp"
        android:layout_weight="1"
        android:background="@drawable/radio_corner"
        android:backgroundTint="@color/link_aja"
        android:buttonTint="@color/re_black"
        android:text="@string/link_aja"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:ignore="TouchTargetSizeCheck" />
    </RadioGroup>
    
    <TextView
      android:id="@+id/tv_re_subscribe_payment_summary"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/payment_summary"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/rdg_re_subscribe_payment_method" />
    
    
    <TextView
      android:id="@+id/tv_re_subscribe_fee"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/booking_fee"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_payment_summary" />
    
    <TextView
      android:id="@+id/tv_re_subscribe_fee_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/_0"
      app:layout_constraintBottom_toBottomOf="@+id/tv_re_subscribe_fee"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tv_re_subscribe_fee"
      app:layout_constraintVertical_bias="1.0" />
    
    <ImageView
      android:id="@+id/imageView6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:contentDescription="@string/break_line"
      android:src="@drawable/black_line"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_fee" />
    
    <TextView
      android:id="@+id/tv_re_subscribe_total_payment"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/total_payment"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView6" />
    
    <TextView
      android:id="@+id/tv_re_subscribe_total_payment_value"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/_0"
      app:layout_constraintBottom_toBottomOf="@+id/tv_re_subscribe_total_payment"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@+id/tv_re_subscribe_total_payment" />
    
    <com.google.android.material.button.MaterialButton
      android:id="@+id/btn_re_subscribe_submit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:enabled="false"
      android:fontFamily="@font/poppins_semibold"
      android:text="@string/extend_for"
      android:textAllCaps="false"
      android:textSize="20sp"
      app:cornerRadius="30dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/tv_re_subscribe_total_payment" />
  
  </androidx.constraintlayout.widget.ConstraintLayout>
  
  <ProgressBar
    android:id="@+id/pb_re_subscribe"
    style="@android:style/Widget.Material.ProgressBar.Large"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
