<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:layout_margin="8dp"
  app:cardBackgroundColor="@color/white"
  app:cardCornerRadius="20dp">
  
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">
    
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:orientation="vertical">
      
      <TextView
        android:id="@+id/tv_card_transaction_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:fontFamily="@font/poppins_semibold"
        android:singleLine="true"
        android:text="@string/name" />
      
      <TextView
        android:id="@+id/tv_card_transaction_total_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/total_price" />
    </LinearLayout>
    
    <TextView
      android:id="@+id/tv_card_transaction_slot"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_weight="4"
      android:background="@drawable/card_green_full"
      android:fontFamily="@font/poppins"
      android:gravity="center"
      android:text="@string/_0"
      android:textColor="@color/white"
      android:textSize="24sp" />
  </LinearLayout>

</com.google.android.material.card.MaterialCardView>
